--- a/style.css
+++ b/style.css
@@ -40,3 +40,62 @@ html {
         transform: rotate(360deg);
     }
 }
+
+#header {
+    width: 80%;
+    padding: 4% 10%;
+    text-align: center;
+    position: absolute;
+    transition: 0.6s ease-in-out;
+}
+
+#header div {
+    display: block;
+}
+
+#title {
+    font-size: 40px;
+    background-image: linear-gradient(to left, #3d3d3d 0%, #cfcfcf 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 500% 500% !important;
+    -webkit-animation: Gradient 20s ease infinite;
+    -moz-animation: Gradient 20s ease infinite;
+    -o-animation: Gradient 20s ease infinite;
+    animation: Gradient 20s ease infinite;
+    font-family: 'Comfortaa', cursive;
+}
+
+#links {
+    margin: 40px 0px;
+    transition: 0.6s ease-in-out;
+    color: #fff;
+}
+
+#links a {
+    margin: 0px 30px;
+    color: inherit;
+    text-decoration: none;
+    transition: 0.4s ease-in-out;
+    padding: 5px 8px;
+    border-bottom: 2px solid transparent;
+}
+
+#links a:hover {
+    border-bottom: 2px solid #fff;
+}
+
+#middle {
+    width: 100%;
+    height: 80vh;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), url("./assets/img/background.jpg") center center fixed;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    transition: 1s ease-in-out;
+    padding-top: 20vh;
+}
