--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ html {
 
 #title {
     font-size: 40px;
-    background-image: linear-gradient(to left, #3d3d3d 0%, #cfcfcf 100%);
+    background-image: linear-gradient(to left, #3d3d3d 0%, #f5f5f5 100%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -98,4 +98,66 @@ html {
     flex-direction: column;
     transition: 1s ease-in-out;
     padding-top: 20vh;
+}
+
+#tagline {
+    font-size: 50px;
+    width: 60%;
+}
+
+#portfolio {
+    width: 80%;
+    padding: 2% 10%
+}
+
+#portfolio div h1 {
+    font-size: 40px;
+    background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 500% 500% !important;
+    -webkit-animation: Gradient 20s ease infinite;
+    -moz-animation: Gradient 20s ease infinite;
+    -o-animation: Gradient 20s ease infinite;
+    animation: Gradient 20s ease infinite;
+    font-family: 'Comfortaa', cursive;
+}
+
+#skills {
+    margin: 4vh 0px !important;
+    padding: 2vh 0px !important
+}
+
+#work {
+    margin: 4vh 0px !important;
+    padding: 2vh 0px !important;
+}
+
+#contact {
+    margin: 4vh 0px !important;
+    padding: 2vh 0px !important;
+}
+
+.btn-one {
+    color: #f5f5f5;
+    padding: 10px 40px;
+    border-radius: 50px;
+    border: 2px solid #f5f5f5;
+    font-size: 18px;
+    font-family: 'Comfortaa', cursive;
+    font-weight: bold;
+    background: transparent;
+    transition: 0.6s ease-in-out;
+    margin: 30px 10px;
+}
+
+.btn-one:hover {
+    background: #f5f5f5;
+    cursor: pointer;
+    color: #000;
+}
+
+.project div {
+    font-weight: normal;
 }
