--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body,
 html {
     padding: 0px;
     margin: 0px;
+    box-sizing: border-box;
     font-family: 'Comfortaa', serif;
     font-weight: bold;
     color: #f5f5f5;
@@ -56,8 +57,6 @@ html {
 
 #title {
     font-size: 6rem;
-    color: #f5f5f5;
-    font-family: 'Comfortaa', serif
 }
 
 #links {
@@ -95,13 +94,13 @@ html {
     padding-top: 20vh;
 }
 
-#middle p {
-    font-size: 1.5rem;
+#tagline-container  {
+    width: 40%;
 }
 
 #tagline {
     font-size: 3rem;
-    width: 60%;
+
 }
 
 #portfolio {
