--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ html {
 }
 
 #tagline-container  {
-    width: 40%;
+    margin-top: 200px;
+    width: 60%;
 }
 
 #tagline {
@@ -103,27 +104,25 @@ html {
 
 }
 
+#tagline-copy {
+    width: 60%;
+    line-height: 1.5;
+}
+
 #portfolio {
     width: 80%;
     padding: 2% 10%
 }
 
-#portfolio div h2 {
+#portfolio div h3 {
     font-size: 2.5rem;
-    background-image: linear-gradient(to left, #777777 0%, #c5c0bf 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 500% 500% !important;
-    -webkit-animation: Gradient 20s ease infinite;
-    -moz-animation: Gradient 20s ease infinite;
-    -o-animation: Gradient 20s ease infinite;
-    animation: Gradient 20s ease infinite;
+    color: #f5f5f5;
     font-family: 'Comfortaa', cursive;
+    border-bottom: 1px solid #7e7d7d;
 }
 
 .p-copy {
-    font-size: 1.25rem;
+    font-size: 1rem;
     line-height: 2rem;
 }
 
