--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ html {
     line-height: 1.5;
 }
 
+#button-container {
+    margin-top: 50px;
+}
+
 #portfolio {
     width: 80%;
     padding: 2% 10%
@@ -156,6 +160,7 @@ html {
     background: transparent;
     transition: 0.6s ease-in-out;
     margin: 30px 10px;
+    text-decoration: none;
 }
 
 .btn-one:hover {
