--- a/style.css
+++ b/style.css
@@ -359,9 +359,11 @@ button:focus {
         font-size: 6rem;
     }
 
-    #links a {
+    #links {
         display: flex;
         justify-content: center;
+        font-size: 1.5rem;
+        line-height: 2;
     }
 
     #middle {
