--- a/style.css
+++ b/style.css
@@ -132,7 +132,16 @@ html {
 
 #skills {
     margin: 4vh 0px !important;
-    padding: 2vh 0px !important
+    padding: 2vh 0px !important;
+}
+
+#tech-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+i {
+    font-size: 5rem;
 }
 
 #work {
