--- a/style.css
+++ b/style.css
@@ -390,12 +390,16 @@ button:focus {
         font-size: 1.75rem;
     }
 
-    .btn_one {
+    #tech-container i {
+        font-size: 2.5rem;
+    }
+
+    .btn-one {
         font-size: 14px;
         padding: 8px 20px;
     }
 
-    .btn_two {
+    .btn-two {
         font-size: 14px;
         padding: 8px 20px;
     }
@@ -404,7 +408,7 @@ button:focus {
         width: 92%;
     }
 
-    .btn_social {
+    .btn-social {
         font-size: 14px;
         margin: 10px;
         padding: 10px 11px;
