--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ html {
     padding: 2% 10%
 }
 
-#portfolio div h3 {
+#portfolio section h3 {
     font-size: 2.5rem;
     color: #f5f5f5;
     font-family: 'Comfortaa', cursive;
