--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body,tech
+body,
 html {
     padding: 0px;
     margin: 0px;
@@ -43,7 +43,7 @@ html {
     }
 }
 
-#head {
+#heading {
     width: 80%;
     padding: 4% 10%;
     text-align: center;
@@ -51,7 +51,7 @@ html {
     transition: 0.6s ease-in-out;
 }
 
-#head div {
+#heading div {
     display: block;
 }
 
@@ -201,26 +201,11 @@ html {
     margin: 6vh 0px;
 }
 
-#footer {
+#footer-copy {
     width: 100%;
     padding: 10vh 0px;
     text-align: center;
     font-weight: bold;
-}
-
-#footer a {
-    font-size: 18px;
-    background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 500% 500% !important;
-    -webkit-animation: Gradient 20s ease infinite;
-    -moz-animation: Gradient 20s ease infinite;
-    -o-animation: Gradient 20s ease infinite;
-    animation: Gradient 20s ease infinite;
-    font-family: 'Comfortaa', cursive;
-    text-decoration: none;
 }
 
 button:focus {
@@ -292,7 +277,6 @@ button:focus {
     text-align: center;
     font-weight: bold;
     font-size: 1em;
-
 }
 
 button:focus {
@@ -360,7 +344,7 @@ button:focus {
 
 /* Media queries */
 @media (max-width: 900px) {
-    #head {
+    #heading {
         width: 94%;
         padding: 15% 3%;
     }
