--- a/style.css
+++ b/style.css
@@ -158,6 +158,22 @@ html {
     padding: 2vh 0px !important;
 }
 
+.socials-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+}
+
+.socials-list a {
+    color: inherit;
+    text-decoration: none;
+    
+}
+
+.socials-list-item {
+    margin-right: 2em;
+}
+
 .btn-one {
     color: #f5f5f5;
     padding: 10px 40px;
@@ -197,8 +213,8 @@ html {
     color: #f5f5f5;
 }
 
-#details {
-    margin: 6vh 0px;
+.btn-social {
+    font-size: 1.5rem;
 }
 
 #footer-copy {
